--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -221,6 +221,7 @@ nav#block-hsk-footer
 
         ul
           background: $primary-color
+          min-width: 210px
           border: none
           top: 27px!important
           padding: 8px 0
