--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -171,6 +171,12 @@
       //display: flex
       .field
         margin-right: 20px
+    .group-top
+      +make-row
+      .field--name-field-team-description
+        +make-md-column(9)
+      .js-view-dom-id-fd8b98a724d27368114bfca7df11c859ee97caca6a0420a0c4eea67fd2262288
+        +make-md-column(3)
 
 .node-vereinsmeisterschaft, .node-meisterturnier,
 .node-vormeisterturnier, .node-hauptturnier
