--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -238,6 +238,7 @@ nav#block-hsk-footer
             ul
               background: #b76400
               top: 27px!important
+              min-width: 210px
               li
                 a
                   background: none
