--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2032,19 +2032,21 @@ i.icon {
       position: relative;
       min-height: 1px;
       padding-left: 15px;
-      padding-right: 15px; } }
+      padding-right: 15px;
+      margin-right: 0; } }
     @media only screen and (min-width: 768px) and (min-width: 992px) {
       .page-node-type-team .group-top .field--name-field-team-description {
         float: left;
         width: 75%; } }
 @media only screen and (min-width: 768px) {
-    .page-node-type-team .group-top .js-view-dom-id-fd8b98a724d27368114bfca7df11c859ee97caca6a0420a0c4eea67fd2262288 {
+    .page-node-type-team .group-top .views-element-container {
       position: relative;
       min-height: 1px;
       padding-left: 15px;
-      padding-right: 15px; } }
+      padding-right: 15px;
+      margin-right: 0; } }
     @media only screen and (min-width: 768px) and (min-width: 992px) {
-      .page-node-type-team .group-top .js-view-dom-id-fd8b98a724d27368114bfca7df11c859ee97caca6a0420a0c4eea67fd2262288 {
+      .page-node-type-team .group-top .views-element-container {
         float: left;
         width: 25%; } }
 
