--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -221,7 +221,7 @@ nav#block-hsk-footer
 
         ul
           background: $primary-color
-          min-width: 210px
+          min-width: 210px!important
           border: none
           top: 27px!important
           padding: 8px 0
@@ -238,7 +238,7 @@ nav#block-hsk-footer
             ul
               background: #b76400
               top: 27px!important
-              min-width: 210px
+              min-width: 210px!important
               li
                 a
                   background: none
