--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -179,6 +179,17 @@
       .views-element-container
         +make-md-column(3)
         margin-right: 0
+        .views-field-field-player-image
+          margin-bottom: 5px
+        .views-field-title
+          .views-label
+            +small-label
+            color: $light-grey-text
+            //font-weight: normal
+            display: block
+            margin-bottom: 0
+          .field-content
+            display: block
 
 .node-vereinsmeisterschaft, .node-meisterturnier,
 .node-vormeisterturnier, .node-hauptturnier
