--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2049,7 +2049,18 @@ i.icon {
       .page-node-type-team .group-top .views-element-container {
         float: left;
         width: 25%; } }
-
+@media only screen and (min-width: 768px) {
+      .page-node-type-team .group-top .views-element-container .views-field-field-player-image {
+        margin-bottom: 5px; }
+      .page-node-type-team .group-top .views-element-container .views-field-title .views-label {
+        font-size: 11.05px;
+        font-size: 0.85rem;
+        margin-bottom: 2px;
+        color: #888;
+        display: block;
+        margin-bottom: 0; }
+      .page-node-type-team .group-top .views-element-container .views-field-title .field-content {
+        display: block; } }
 .node-vereinsmeisterschaft #page-title h1, .node-meisterturnier #page-title h1,
 .node-vormeisterturnier #page-title h1, .node-hauptturnier #page-title h1 {
   margin-left: 100px;
@@ -2447,7 +2458,7 @@ nav#block-hsk-footer {
         display: none; }
     header nav#block-hsk-zymphonies-main-menu ul.menu ul {
       background: #ED8600;
-      min-width: 210px;
+      min-width: 210px !important;
       border: none;
       top: 27px !important;
       padding: 8px 0;
@@ -2468,7 +2479,7 @@ nav#block-hsk-footer {
         header nav#block-hsk-zymphonies-main-menu ul.menu ul li ul {
           background: #b76400;
           top: 27px !important;
-          min-width: 210px; }
+          min-width: 210px !important; }
           header nav#block-hsk-zymphonies-main-menu ul.menu ul li ul li a {
             background: none; }
             header nav#block-hsk-zymphonies-main-menu ul.menu ul li ul li a:hover, header nav#block-hsk-zymphonies-main-menu ul.menu ul li ul li a.highlighted {
