Styling Tabs aus Fieldgroup

--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -130,7 +130,9 @@
       border-right: 0
 
 .page-node-type-team
-  .group-kader
+  .group-team-results
+    .horizontal-tabs
+      +tab-group-container
     .views-field-field-player-image
       img
         width: 45px
