--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1978,7 +1978,42 @@ i.icon {
 .page-node-type-turnier.node-schnellschach #info-tabs, .page-node-type-turnier.node-monatsblitz #info-tabs {
   border-right: 0; }
 
-.page-node-type-team .group-kader .views-field-field-player-image img {
+.page-node-type-team .group-team-results .horizontal-tabs {
+  border: none; }
+  .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list {
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+    margin: 12px 0 0;
+    background: #ddd; }
+    .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li {
+      display: inline-block;
+      padding: 12px 12px;
+      -webkit-border-radius: 5px 5px 0 0;
+      -moz-border-radius: 5px 5px 0 0;
+      -ms-border-radius: 5px 5px 0 0;
+      -o-border-radius: 5px 5px 0 0;
+      border-radius: 5px 5px 0 0;
+      margin-right: 7px;
+      font-size: 11.7px;
+      font-size: 0.9rem;
+      font-weight: bold; }
+      .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li a {
+        color: #777; }
+      .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li.selected {
+        border: 1px solid #bbb;
+        border-bottom: none;
+        background: white; }
+        .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li.selected a {
+          color: #333; }
+      .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li:hover {
+        cursor: pointer;
+        cursor: hand; }
+      .page-node-type-team .group-team-results .horizontal-tabs .horizontal-tabs-list li:last-child {
+        margin-right: 0; }
+.page-node-type-team .group-team-results .views-field-field-player-image img {
   width: 45px;
   height: auto; }
 
