--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -18,6 +18,41 @@ $divider-line: 1px solid #e5e5e5
   .tab-button
     +tab-button
 
+@mixin tab-group-container
+  border: none
+  .horizontal-tabs-list
+    +tab-container-fieldgroup
+
+@mixin tab-container-fieldgroup
+  +border-radius(5px 5px 0 0)
+  margin: 12px 0 0
+  background: #ddd
+  li
+    +tab-button-fieldgroup
+
+@mixin tab-button-fieldgroup
+  .horizontal-tabs-list
+  display: inline-block
+  padding: 12px 12px
+  +border-radius(5px 5px 0 0)
+  margin-right: 7px
+  a
+    color: #777
+  //background: #f5f5f5
+  +x-rem(font-size, 0.9)
+  font-weight: bold
+  &.selected
+    border: 1px solid #bbb
+    border-bottom: none
+    background: white
+    a
+      color: $base-text-color
+  &:hover
+    cursor: pointer
+    cursor: hand
+  &:last-child
+    margin-right: 0
+
 @mixin tab-button
   display: inline-block
   padding: 12px 12px
