--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -133,10 +133,13 @@
   .group-team-results
     .horizontal-tabs
       +tab-group-container
+    .horizontal-tabs-panes
+      +tab-content-container
     .views-field-field-player-image
       img
         width: 45px
         height: auto
+
 
 
 
