--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -31,14 +31,17 @@ $divider-line: 1px solid #e5e5e5
     +tab-button-fieldgroup
 
 @mixin tab-button-fieldgroup
-  .horizontal-tabs-list
+  float: none
+  background: none
+  border: none
   display: inline-block
   padding: 12px 12px
   +border-radius(5px 5px 0 0)
   margin-right: 7px
   a
     color: #777
-  //background: #f5f5f5
+    background: none
+    padding: 0
   +x-rem(font-size, 0.9)
   font-weight: bold
   &.selected
@@ -52,6 +55,9 @@ $divider-line: 1px solid #e5e5e5
     cursor: hand
   &:last-child
     margin-right: 0
+  &:first-child
+    a
+      padding-left: 3px
 
 @mixin tab-button
   display: inline-block
