--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -83,6 +83,8 @@ $divider-line: 1px solid #e5e5e5
   border: 1px solid #ccc
   border-top: 0
   padding: 25px 22px 12px
+  .details-wrapper
+    padding: 0
 
 @mixin pagetitle-with-icon
   margin-left: 100px
