--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -43,7 +43,8 @@ ul.tabs
   display: inline-block
 
 table
-  +x-rem(font-size, 1) 
+  +x-rem(font-size, 1)
+  background: white
   margin-bottom: 10px
   th, td
     text-align: center
