--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -152,6 +152,9 @@
               padding: 15px 20px
               +x-rem(font-size, 1.3)
               float: left
+              max-width: 50%
+              text-align: left
+              line-height: 1.35
   .path-news
     .view-news
       .views-row
@@ -188,7 +191,11 @@
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop)
   .path-frontpage
+    .region-slideshow
+      background: #888
     #block-views-block-header-slideshow-block-1
       max-height: 400px
+      max-width: 1600px
+      margin: auto
 
 /* End Media Query Tablet */
