--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -182,7 +182,7 @@
 
 
 
-/* End Media Query Tablet */
+/* End Media Query Desktop narrow */
 
 /*------------------------------------------- */
 /*------------------------------------------- */
@@ -191,11 +191,21 @@
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop)
   .path-frontpage
-    .region-slideshow
-      background: #888
     #block-views-block-header-slideshow-block-1
       max-height: 400px
       max-width: 1600px
       margin: auto
+
+/* End Media Query Desktop */
+
+/*------------------------------------------- */
+/*------------------------------------------- */
+/*------------ Super- Desktop  ---------------*/
+/*------------------------------------------- */
+/*------------------------------------------- */
++breakpoint($breakpoint-super-desktop)
+  .path-frontpage
+    .region-slideshow
+      background: #888
 
 /* End Media Query Tablet */
