--- a/themes/hsk_zymphonies/sass/includes/_variables.sass
+++ b/themes/hsk_zymphonies/sass/includes/_variables.sass
@@ -3,6 +3,7 @@ $breakpoint-tablet-portrait: 480px
 $breakpoint-tablet: 768px
 $breakpoint-desktop-narrow: 992px
 $breakpoint-desktop: 1200px
+$breakpoint-super-desktop: 1600px
 
 // Page widths
 $desktop-narrow-width: 980px
