--- a/themes/hsk_zymphonies/sass/_base.sass
+++ b/themes/hsk_zymphonies/sass/_base.sass
@@ -66,6 +66,12 @@ i.icon
 .slick-list
   z-index: 2
 
+button, a
+  &.btn
+    color: #eee
+    &:hover
+      color: white
+
 
 
 /*------------------------------------------- */
