Anmeldeformular und Styling dafür

--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1867,6 +1867,12 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form input {
 /*------------------------------------------- */
 /*------------------------------------------- */
 @media only screen and (min-width: 768px) {
+  form#webform-submission-anmeldung-als-vereinsmitglied-form .description {
+    margin-left: 147px;
+    margin-top: 2px;
+    font-size: 11.05px;
+    font-size: 0.85rem;
+    color: #888; }
   form#webform-submission-anmeldung-als-vereinsmitglied-form .form-required:after {
     background-image: url(../../../../core/misc/icons/ee0000/required.svg);
     margin-left: 6px; }
