--- a/themes/hsk_zymphonies/sass/_forms.sass
+++ b/themes/hsk_zymphonies/sass/_forms.sass
@@ -37,6 +37,11 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet)
   form#webform-submission-anmeldung-als-vereinsmitglied-form
+    .description
+      margin-left: 147px
+      margin-top: 2px
+      +x-rem(font-size, 0.85)
+      color: #888
     .form-required
       &:after
         background-image: url(../../../../core/misc/icons/ee0000/required.svg)
