--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2740,9 +2740,13 @@ nav#block-hsk-footer {
       margin-bottom: 0;
       border: none; }
 .path-frontpage #block-views-block-news-block-1 .views-row {
-  margin-bottom: 10px; }
+  margin-bottom: 15px; }
   .path-frontpage #block-views-block-news-block-1 .views-row h3 {
     margin-bottom: 2px; }
+.path-frontpage #block-views-block-news-block-1 .views-field-created {
+  font-size: 10.4px;
+  font-size: 0.8rem;
+  color: #888; }
 .path-frontpage #block-views-block-news-block-1 .views-field-body p {
   margin-bottom: 0; }
 .path-frontpage #block-views-block-news-block-1 .views-field-view-node a {
