--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -51,9 +51,11 @@
 
   #block-views-block-news-block-1
     .views-row
-      margin-bottom: 10px
+      margin-bottom: 15px
       h3
         margin-bottom: 2px
+    .views-field-created
+      +small-grey-links
     .views-field-body
       p
         margin-bottom: 0
