--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2743,6 +2743,13 @@ nav#block-hsk-footer {
   margin-bottom: 15px; }
   .path-frontpage #block-views-block-news-block-1 .views-row h3 {
     margin-bottom: 2px; }
+    .path-frontpage #block-views-block-news-block-1 .views-row h3 span.date {
+      font-size: 10.4px;
+      font-size: 0.8rem;
+      color: #888;
+      color: #999; }
+      .path-frontpage #block-views-block-news-block-1 .views-row h3 span.date:before {
+        content: "- "; }
 .path-frontpage #block-views-block-news-block-1 .views-field-created {
   font-size: 10.4px;
   font-size: 0.8rem;
