--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -54,6 +54,12 @@
       margin-bottom: 15px
       h3
         margin-bottom: 2px
+        span.date
+          +small-grey-links
+          color: #999
+          &:before
+            content: "- "
+
     .views-field-created
       +small-grey-links
     .views-field-body
