Termin- und News-Views Blöcke Anzahl der News und Styling

--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -13,9 +13,10 @@
       color: $grey-text
       border-bottom: 1px solid $divider-line-color
     .more-link
+      margin-top: -20px
       a
         +small-grey-links
-        padding-right: 15px
+        padding-right: 30px
     .views-row
       display: flex
       margin-bottom: 9px
@@ -50,6 +51,8 @@
           border: none
 
   #block-views-block-news-block-1
+    h2.title
+      margin-bottom: 15px
     .views-row
       margin-bottom: 15px
       h3
