--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1671,11 +1671,22 @@ button.btn, a.btn {
   .path-frontpage .view-header-slideshow .views-row .views-field-field-fc-sl-image img {
     width: 100%; }
 
+.sidebar .view-events-list .views-row {
+  margin-bottom: 8px; }
+.sidebar .view-events-list h3 {
+  margin-top: 3px;
+  padding-bottom: 2px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #e5e5e5; }
 .sidebar .view-events-list .views-field-title h3 {
   font-size: 13px;
-  font-size: 1rem; }
+  font-size: 1rem;
+  border: none;
+  padding-bottom: 0; }
 .sidebar .view-events-list .views-field-field-ev-start-time {
   color: #777;
+  line-height: 1.2;
+  margin-bottom: -2px;
   font-size: 11.7px;
   font-size: 0.9rem; }
   .sidebar .view-events-list .views-field-field-ev-start-time .date {
@@ -1685,6 +1696,12 @@ button.btn, a.btn {
     .sidebar .view-events-list .views-field-field-ev-start-time .time:before {
       content: "-";
       padding: 0 0 0 1px; }
+.sidebar .view-events-list .more-link {
+  margin-top: -5px; }
+  .sidebar .view-events-list .more-link a {
+    font-size: 10.4px;
+    font-size: 0.8rem;
+    color: #888; }
 
 .path-news .view-news .views-row {
   margin-bottom: 15px; }
@@ -2694,11 +2711,13 @@ nav#block-hsk-footer {
 .path-frontpage #block-views-block-events-list-block-1 h3 {
   color: #666;
   border-bottom: 1px solid #e5e5e5; }
-.path-frontpage #block-views-block-events-list-block-1 .more-link a {
-  font-size: 10.4px;
-  font-size: 0.8rem;
-  color: #888;
-  padding-right: 15px; }
+.path-frontpage #block-views-block-events-list-block-1 .more-link {
+  margin-top: -20px; }
+  .path-frontpage #block-views-block-events-list-block-1 .more-link a {
+    font-size: 10.4px;
+    font-size: 0.8rem;
+    color: #888;
+    padding-right: 30px; }
 .path-frontpage #block-views-block-events-list-block-1 .views-row {
   display: flex;
   margin-bottom: 9px;
@@ -2739,6 +2758,8 @@ nav#block-hsk-footer {
       margin-top: 3px;
       margin-bottom: 0;
       border: none; }
+.path-frontpage #block-views-block-news-block-1 h2.title {
+  margin-bottom: 15px; }
 .path-frontpage #block-views-block-news-block-1 .views-row {
   margin-bottom: 15px; }
   .path-frontpage #block-views-block-news-block-1 .views-row h3 {
