--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -24,11 +24,22 @@
 
 .sidebar
   .view-events-list
+    .views-row
+      margin-bottom: 8px
+    h3
+      margin-top: 3px
+      padding-bottom: 2px
+      margin-bottom: 5px
+      border-bottom: $divider-line
     .views-field-title
       h3
         +x-rem(font-size, 1)
+        border: none
+        padding-bottom: 0
     .views-field-field-ev-start-time
       color: #777
+      line-height: 1.2
+      margin-bottom: -2px
       +x-rem(font-size, 0.9)
       .date
         display: inline
@@ -37,6 +48,10 @@
         &:before
           content: "-"
           padding: 0 0 0 1px
+    .more-link
+      margin-top: -5px
+      a
+        +small-grey-links
 
 .path-news
   .view-news
