--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -31,6 +31,9 @@
       +x-rem(font-size, 0.8)
       color: $light-grey-text
 
+  .embedded-entity
+    .node--type-player
+
 .page-node-type-article
   node__content
     +legacy-pie-clearfix
