--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1932,38 +1932,67 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form input {
 /*------------- All Screen Sizes ------------- */
 /*------------------------------------------- */
 /*------------------------------------------- */
-.node .comment-submitted {
-  border: none;
-  padding: 0; }
-.node .field--name-field-tags {
-  clear: left; }
-  .node .field--name-field-tags .field__label {
-    font-weight: normal;
-    display: inline-block; }
-  .node .field--name-field-tags .field__items {
-    display: inline-block; }
-  .node .field--name-field-tags .field__item {
-    display: inline-block; }
-    .node .field--name-field-tags .field__item a {
+.node {
+  *zoom: 1; }
+  .node:after {
+    content: "\0020";
+    display: block;
+    height: 0;
+    clear: both;
+    overflow: hidden;
+    visibility: hidden; }
+  .node .comment-submitted {
+    border: none;
+    padding: 0; }
+  .node .field--name-field-tags {
+    clear: left; }
+    .node .field--name-field-tags .field__label {
+      font-weight: normal;
+      display: inline-block; }
+    .node .field--name-field-tags .field__items {
+      display: inline-block; }
+    .node .field--name-field-tags .field__item {
+      display: inline-block; }
+      .node .field--name-field-tags .field__item a {
+        font-size: 10.4px;
+        font-size: 0.8rem;
+        color: #888;
+        border: 1px solid #ddd;
+        -webkit-border-radius: 7px;
+        -moz-border-radius: 7px;
+        -ms-border-radius: 7px;
+        -o-border-radius: 7px;
+        border-radius: 7px;
+        line-height: 1;
+        padding: 0 5px 1px; }
+  .node .node__links {
+    margin-top: 8px; }
+    .node .node__links li {
+      padding-left: 0; }
+    .node .node__links a {
       font-size: 10.4px;
       font-size: 0.8rem;
-      color: #888;
-      border: 1px solid #ddd;
-      -webkit-border-radius: 7px;
-      -moz-border-radius: 7px;
-      -ms-border-radius: 7px;
-      -o-border-radius: 7px;
-      border-radius: 7px;
-      line-height: 1;
-      padding: 0 5px 1px; }
-.node .node__links {
-  margin-top: 8px; }
-  .node .node__links li {
-    padding-left: 0; }
-  .node .node__links a {
-    font-size: 10.4px;
-    font-size: 0.8rem;
-    color: #888; }
+      color: #888; }
+  .node .embedded-entity {
+    margin-top: 12px;
+    float: left;
+    text-align: center;
+    width: 100%; }
+    .node .embedded-entity .node--type-player {
+      height: 187px; }
+      .node .embedded-entity .node--type-player h2 {
+        font-size: 15.6px;
+        font-size: 1.2rem; }
+      .node .embedded-entity .node--type-player .field--name-field-player-image {
+        margin-bottom: 5px; }
+      .node .embedded-entity .node--type-player .field--name-field-function-club {
+        max-width: 135px;
+        margin: auto;
+        font-size: 11.05px;
+        font-size: 0.85rem;
+        margin-bottom: 2px;
+        line-height: 1.3;
+        color: #888; }
 
 .page-node-type-article node__content {
   *zoom: 1; }
@@ -2193,6 +2222,15 @@ form#webform-submission-anmeldung-als-vereinsmitglied-form input {
 /*------------------------------------------- */
 /*------------------------------------------- */
 @media only screen and (min-width: 768px) {
+  .node .embedded-entity {
+    margin-top: 12px;
+    float: left;
+    text-align: center;
+    width: 33.3%; }
+    .node .embedded-entity h2 {
+      font-size: 14.3px;
+      font-size: 1.1rem; }
+
   .page-node-type-article .field--name-field-image {
     float: left;
     margin: 5px 15px 5px 0; }
