--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -4,6 +4,7 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 .node
+  +legacy-pie-clearfix
   .comment-submitted
     border: none
     padding: 0
@@ -32,7 +33,22 @@
       color: $light-grey-text
 
   .embedded-entity
+    margin-top: 12px
+    float: left
+    text-align: center
+    width: 100%
     .node--type-player
+      height: 187px
+      h2
+        +x-rem(font-size, 1.2)
+      .field--name-field-player-image
+        margin-bottom: 5px
+      .field--name-field-function-club
+        max-width: 135px
+        margin: auto
+        +small-label
+        line-height: 1.3
+        color: #888
 
 .page-node-type-article
   node__content
@@ -192,6 +208,15 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet)
+  .node
+    .embedded-entity
+      margin-top: 12px
+      float: left
+      text-align: center
+      width: 33.3%
+      h2
+        +x-rem(font-size, 1.1)
+
   .page-node-type-article
     .field--name-field-image
       float: left
