--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -38,6 +38,7 @@
     text-align: center
     width: 100%
     .node--type-player
+      padding: 0 15px
       height: 187px
       h2
         +x-rem(font-size, 1.2)
