--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -51,6 +51,25 @@
         line-height: 1.3
         color: #888
 
+  // Image galleries from Paragraphs
+  .field--name-field-gallery-above-body
+    
+  .field--name-field-gallery-below-body
+    margin: 10px 0 8px
+  .paragraph--type--image-gallery
+    .field__items
+      display: flex
+      flex-wrap: wrap
+      .field__item
+        a
+          display: block
+          padding: 8px
+          margin: 0 17px 17px 0
+          background: white
+          +box-shadow(0px 0px 3px #eee)
+          border: 1px solid #e5e5e5
+
+
 .page-node-type-article
   node__content
     +legacy-pie-clearfix
