--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -49,6 +49,13 @@
           margin-top: 3px
           margin-bottom: 0
           border: none
+      .views-field-field-event-room
+        display: flex
+        margin-top: 0.3em
+        +small-grey-links
+        margin-left: 10px
+        .views-label-field-event-room
+          margin-right: 0.3em
 
   #block-views-block-news-block-1
     h2.title
