--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -97,7 +97,7 @@
         margin-top: 3px
         +x-rem(font-size, 0.75)
         //float: left
-        margin-right: 11px
+        margin-right: 14px
         text-align: center
         min-width: 75px
         .date
@@ -110,7 +110,6 @@
           border-top: 0
           line-height: 1.2
       .views-field-title
-        display: flex
         h3
           //font-family: $open-sans
           +x-rem(font-size, 1.1)
@@ -118,6 +117,15 @@
           margin-top: 3px
           margin-bottom: 0
           border: none
+      .views-field-field-event-room
+        display: flex
+        margin-top: 0.45em
+        +small-grey-links
+        margin-left: 10px
+        .views-label-field-event-room
+          margin-right: 0.3em
+          margin-right: 0.3em
+
 
 
 
