--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -85,6 +85,14 @@
     h3
       +x-rem(font-size, 1.2)
 
+  #block-begrussungstext
+    a.btn
+      +button-orange
+      font-weight: bold
+      color: white
+      //+x-rem(font-size, 1.1)
+      //height: auto
+
   #block-infoblockstartseite1
     position: relative
     padding-left: 40px
