--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -106,4 +106,9 @@ $divider-line: 1px solid #e5e5e5
     content: "\f135"
     color: white
 
+@mixin button-orange
+  background: $primary-color
+  &:hover
+    background: darken($primary-color, 10%)
+
 
