--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -90,6 +90,17 @@
       +button-orange
       font-weight: bold
       color: white
+      &:before
+        font-family: Fontawesome
+        content: "\f061"
+        padding-right: 5px
+        font-weight: normal
+        +x-rem(font-size, 1)
+        border: 1px solid #f9c17c
+        +border-radius(15px)
+        padding: 2px 4px
+        margin-right: 6px
+        margin-left: -3px
       //+x-rem(font-size, 1.1)
       //height: auto
 
