Etwas Letter-Spacing für Anmeldebutton

--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -90,6 +90,7 @@
       +button-orange
       font-weight: bold
       color: white
+      letter-spacing: +0.02em
       &:before
         font-family: Fontawesome
         content: "\f061"
@@ -99,8 +100,9 @@
         border: 1px solid #f9c17c
         +border-radius(15px)
         padding: 2px 4px
-        margin-right: 6px
+        margin-right: 5px
         margin-left: -3px
+        letter-spacing: 0
       //+x-rem(font-size, 1.1)
       //height: auto
 
