--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2860,7 +2860,8 @@ nav#block-hsk-footer {
 .path-frontpage #block-begrussungstext a.btn {
   background: #ED8600;
   font-weight: bold;
-  color: white; }
+  color: white;
+  letter-spacing: 0.02em; }
   .path-frontpage #block-begrussungstext a.btn:hover {
     background: #ba6900; }
   .path-frontpage #block-begrussungstext a.btn:before {
@@ -2877,8 +2878,9 @@ nav#block-hsk-footer {
     -o-border-radius: 15px;
     border-radius: 15px;
     padding: 2px 4px;
-    margin-right: 6px;
-    margin-left: -3px; }
+    margin-right: 5px;
+    margin-left: -3px;
+    letter-spacing: 0; }
 .path-frontpage #block-infoblockstartseite1 {
   position: relative;
   padding-left: 40px;
