--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1671,6 +1671,8 @@ button.btn, a.btn {
   .path-frontpage .view-header-slideshow .views-row .views-field-field-fc-sl-image img {
     width: 100%; }
 
+.sidebar .view-events-list .view-header {
+  display: none; }
 .sidebar .view-events-list .views-row {
   margin-bottom: 8px; }
 .sidebar .view-events-list h3 {
@@ -1730,6 +1732,18 @@ button.btn, a.btn {
   border-bottom: 1px solid #ccc; }
   .path-termine .view-events-list h3:first-child {
     margin-top: 0; }
+.path-termine .view-events-list .view-header {
+  margin-bottom: 20px;
+  font-size: 13.175px;
+  font-size: 0.85rem;
+  border: 1px solid #e5e5e5;
+  background: #f5f5f5;
+  padding: 8px 13px; }
+  .path-termine .view-events-list .view-header h3 {
+    border: none;
+    line-height: 1.3;
+    margin-bottom: 3px;
+    color: #555; }
 .path-termine .view-events-list .views-row {
   display: flex;
   margin-bottom: 9px;
@@ -2779,6 +2793,18 @@ nav#block-hsk-footer {
     font-size: 0.8rem;
     color: #888;
     padding-right: 30px; }
+.path-frontpage #block-views-block-events-list-block-1 .view-header {
+  margin-bottom: 20px;
+  font-size: 13.175px;
+  font-size: 0.85rem;
+  border: 1px solid #e5e5e5;
+  background: #f5f5f5;
+  padding: 8px 13px; }
+  .path-frontpage #block-views-block-events-list-block-1 .view-header h3 {
+    border: none;
+    line-height: 1.3;
+    margin-bottom: 3px;
+    color: #555; }
 .path-frontpage #block-views-block-events-list-block-1 .views-row {
   display: flex;
   margin-bottom: 9px;
