--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -17,6 +17,17 @@
       a
         +small-grey-links
         padding-right: 30px
+    .view-header
+      margin-bottom: 20px
+      +x-rem(font-size, 0.85)
+      border: 1px solid #e5e5e5
+      background: #f5f5f5
+      padding: 8px 13px
+      h3
+        border: none
+        line-height: 1.3
+        margin-bottom: 3px
+        color: #555
     .views-row
       display: flex
       margin-bottom: 9px
