--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -24,6 +24,8 @@
 
 .sidebar
   .view-events-list
+    .view-header
+      display: none
     .views-row
       margin-bottom: 8px
     h3
@@ -86,6 +88,17 @@
       border-bottom: 1px solid $divider-line-darker-color
       &:first-child
         margin-top: 0
+    .view-header
+      margin-bottom: 20px
+      +x-rem(font-size, 0.85)
+      border: 1px solid #e5e5e5
+      background: #f5f5f5
+      padding: 8px 13px
+      h3
+        border: none
+        line-height: 1.3
+        margin-bottom: 3px
+        color: #555
     .views-row
       display: flex
       margin-bottom: 9px
