--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -139,6 +139,29 @@
           margin-right: 0.3em
           margin-right: 0.3em
 
+.path-dwz-rangliste
+  form#views-exposed-form-dwz-list-page-1
+    .js-form-item
+      display: inline-block
+      margin-right: 10px
+      label
+        margin-right: 5px
+    #edit-actions
+      display: inline-block
+  table
+    th
+      a
+        color: white
+        &:after
+          font-family: Fontawesome
+          content: "\f0d7"
+          margin-left: 5px
+        span.tablesort
+          display: none
+      &#view-field-dwz-table-column
+        a
+          &:after
+            margin-left: 5px
 
 
 
