--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -162,6 +162,16 @@
         a
           &:after
             margin-left: 5px
+    th, td
+      &.views-field-nothing
+        display: none
+.user-logged-in
+  &.path-dwz-rangliste
+    table
+      th, td
+        &.views-field-nothing
+          display: table-cell
+
 
 
 
