--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -80,6 +80,14 @@
           width: auto
 
 .path-termine
+  form.views-exposed-form
+    background: #f5f5f5
+    padding: 0 20px
+    border: 1px solid #ddd
+    margin-bottom: 20px
+    label[for=edit-field-event-type-target-id]
+      margin-right: 20px
+
   .view-events-list
     h3
       +x-rem(font-size, 1.25)
