--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -5,6 +5,8 @@
 /*------------------------------------------- */
 
 header
+  &.main-header
+    z-index: 1
   padding-top: 20px
   +legacy-pie-clearfix
   .brand
